--- a/COBA/Views/Main/Country.cshtml
+++ b/COBA/Views/Main/Country.cshtml
@@ -1,62 +1,39 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
-<div ng-controller="CountryController" class="whitebg">
-    <section class="content-header" style="padding-bottom:10px;">
-        <h1>            Country       </h1>
-        <ol class="breadcrumb">
-            <li>
-                <div class="actions">
-                    <button data-ng-click="showadd()" class="btn btn-outline-info">Add <i class="fa fa-plus"></i></button>
-                </div>
-            </li>
-        </ol>
-    </section>
-    <section class="content">
-        <div class="row">
-            <div id="grid1" ui-grid="CurrencyGrid" ui-grid-pagination class="grid"></div>
-        </div>
-    </section>
-    <div class="modal fade" id="currencyModel" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
-        <div class="modal-dialog" style="width:75%">
-            <div class="modal-content">
-                <div class="modal-header content-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Application Approval Status</h4>
-                </div>
-                <div class="modal-body">
-                    <div>
-                        <div class="row">
-                            <div class="box-body">
-                                <div class="row">
-                                    <div ng-include="'ShowApplicationDetails'"></div>
-                                    <div class="form-group col-lg-12">
-                                        <div class="col-sm-offset-4 col-sm-10">
-                                            <span data-ng-hide="editMode">
-                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
-                                            </span>&nbsp;
-                                            <span data-ng-show="editMode">
-                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
-                                            </span>&nbsp;
-                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info" />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-6 col-sm-offset-2 control-label label-danger" ng-show="errorinfo.length > 0">{{errorinfo}}</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div ng-controller="CountryController"   class="box box-info" style="margin-top:20px">
+    <div class="box-header with-border">
+        <h3 class="box-title">Country Management</h3>
+        <hr />
+        <div class="form-group" ng-show="!IsReadOnly" ng-class="{'has-error':inputTask.$invalid && !inputTask.$pristine }">
+            <label for="inputTask" class="col-md-2 col-md-offset-2  control-label">Country</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" maxlength="50" name="inputTask" ng-model=Country.TaskName>
             </div>
+            <div>
+                <button title="Clear Task name field" data-ng-click="cancel()" class="btn btn-sm btn-info btn-flat pull-right">Clear </button>
+            </div>
+            <div>
+                <button title="Update Task" data-ng-show="editMode" data-ng-click="UpdateCountry(Country)" class="btn btn-sm btn-info btn-flat pull-right">Update</button><!--<i class="fa fa-plus" style="color:white"></i>-->
+                <button title="Add new task" data-ng-hide="editMode" data-ng-click="add(Country)" class="btn btn-sm btn-info btn-flat pull-right">Add <i class="fa fa-plus" style="color:white"></i></button>
+            </div>
+
         </div>
     </div>
-
-    <div ng-include="'ViewApprovals'"></div>
+    <div class="box-body">
+        <div class="mnbxcont">
+            <div data-ag-grid="CountryGrid" class="ag-blue" style="color:#000;height: 400px !important;width:50%;margin-left:20%"></div>
+        </div>
+    </div>
 </div>
-<style>
-    .box-body {
-        padding: 4px;
-    }
-</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
