--- a/COBA/Views/Main/Approvals.cshtml
+++ b/COBA/Views/Main/Approvals.cshtml
@@ -10,9 +10,8 @@
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" id="tab_1">
-                <div ng-controller="ApprovalsController"  class="row">
+                <div ng-controller="ApprovalsController" class="row">
                     <div id="grid1" ui-grid="CurrencyGrid" ui-grid-pagination class="grid"></div>
-
 
                     <div class="modal fade" id="LayoutModel1" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
                         <div class="modal-dialog" style="width:75%">
@@ -119,12 +118,13 @@
                         </div>
                     </div>
 
-
                 </div>
             </div>
             <!-- /.tab-pane -->
             <div class="tab-pane" id="tab_2">
-
+                <div ng-controller="TransfersController" class="row">
+                    
+                </div>
             </div>
             <!-- /.tab-pane -->
             <!-- /.tab-pane -->
