--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -129,6 +129,13 @@
                             <span>Approvals / Transfers</span>
                         </a>
                     </li>
+                    <li class='@Html.IsActive("Main", "TransferSettings")'>
+                        <a href="TransferSettings">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Transfer Settings</span>
+                        </a>
+                    </li>
+
                     <li class='@Html.IsActive("Main", "Emails")'>
                         <a href="Emails">
                             <i class="fa fa-mail-forward"></i>
@@ -286,6 +293,9 @@
     <script src="~/js/controllers/ProductTypeMasterController.js"></script>
     <script src="~/js/controllers/RegionMasterController.js"></script>
     <script src="~/js/controllers/CountryController.js"></script>
+
+    <script src="~/js/controllers/TransferSettingsController.js"></script>
+    <script src="~/js/controllers/TransferController.js"></script>
 
     <script src="~/js/services/TaskService.js"></script>
     <script src="~/js/services/OnboardingTaskService.js"></script>
