--- a/COBA/Views/Main/Approvals.cshtml
+++ b/COBA/Views/Main/Approvals.cshtml
@@ -2,15 +2,14 @@
 <div class="whitebg">
     <section class="content-header" style="padding-bottom:10px;"></section>
 
-
-    <div class="nav-tabs-custom">
+    <div ng-controller="ApprovalsController" class="nav-tabs-custom">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#tab_1" data-toggle="tab" aria-expanded="false"><strong>Approval Management</strong> </a></li>
-            <li class=""><a href="#tab_2" data-toggle="tab" aria-expanded="true"><strong> Transfer Management</strong> </a></li>
+            <li class="active"><a ng-click="activatetab(1)" data-toggle="tab" aria-expanded="false"><strong>Approval Management</strong> </a></li>
+            <li class=""><a ng-click="activatetab(2)" data-toggle="tab" aria-expanded="true"><strong> Transfer Management</strong> </a></li>
         </ul>
-        <div class="tab-content">
-            <div class="tab-pane active" id="tab_1">
-                <div ng-controller="ApprovalsController" class="row">
+        <div>
+            <div class="tab-pane" ng-if="tab1" >
+                <div class="row">
                     <div id="grid1" ui-grid="CurrencyGrid" ui-grid-pagination class="grid"></div>
 
                     <div class="modal fade" id="LayoutModel1" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
@@ -121,9 +120,10 @@
                 </div>
             </div>
             <!-- /.tab-pane -->
-            <div class="tab-pane" id="tab_2">
-                <div ng-controller="TransfersController" class="row">
-                    
+            <div class="tab-pane" ng-if="tab2">
+                <div class="row">
+
+                    <div id="grid1" ui-grid="TransferGrid" ui-grid-pagination class="grid"></div>
                 </div>
             </div>
             <!-- /.tab-pane -->
