--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -179,26 +179,10 @@
                             <li><a href="Country"><i class="fa fa-circle-o"></i> Country</a></li>
                             <li><a href="Region"><i class="fa fa-circle-o"></i> Region</a></li>
                             <li><a href="BusinessSector"><i class="fa fa-circle-o"></i> Business Sector</a></li>
-                            <li><a href="ApplicationName"><i class="fa fa-circle-o"></i> Application Name</a></li>
-                            <li><a href="Application"><i class="fa fa-circle-o"></i> Application ID</a></li>
-                            <li><a href="BusinessSector"><i class="fa fa-circle-o"></i> Business Sector</a></li>
+                            <li><a href="ApplicationName"><i class="fa fa-circle-o"></i> Application Master</a></li>
                             <li><a href="ProductType"><i class="fa fa-circle-o"></i> Product Type</a></li>
                         </ul>
                     </li>
-
-                    @*<li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
-                            <a href="Licensing">
-                                <i class="fa fa-circle-o"></i>
-                                <i class="icon-briefcase"></i> Utilities
-
-
-                            Application
-                            Country
-                            Region
-
-
-                            </a>
-                        </li>*@
                 </ul>
             </section>
             <!-- /.sidebar -->
