--- a/COBA/Views/Main/Strategy.cshtml
+++ b/COBA/Views/Main/Strategy.cshtml
@@ -5,7 +5,7 @@
         <ol class="breadcrumb">
             <li>
                 <div class="actions">
-                    <button data-ng-click="showadd()" class="btn btn-outline-info">Add <i class="fa fa-plus"></i></button>
+                    <button data-ng-click="showadd()" ng-show="!IsReadOnly"  class="btn btn-outline-info">Add <i class="fa fa-plus"></i></button>
                 </div>
             </li>
         </ol>
