--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -25,14 +25,11 @@
                 <span class="logo-lg"><b>ACHI</b></span>
             </a>
             <nav class="navbar navbar-static-top">
-                <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                     <span class="sr-only">Toggle navigation</span>
                 </a>
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-
-                        <!-- Notifications: style can be found in dropdown.less -->
                         <li class="dropdown notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell-o"></i>
@@ -41,35 +38,29 @@
                             <ul class="dropdown-menu">
                                 <li class="header">You have {{notificationdata.length}} notifications</li>
                                 <li>
-                                    <!-- inner menu: contains the actual data -->
                                     <ul class="menu">
                                         <li ng-repeat="n in notificationdata">
                                             <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version,N.Comments,N.ApprovedDate,N.Status)" href="#">
                                                 <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}}
                                             </a>
                                         </li>
-
                                     </ul>
                                 </li>
                                 <li class="footer"><a href="Approvals">View all</a></li>
                             </ul>
                         </li>
-                        <!-- Tasks: style can be found in dropdown.less -->
-                        <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="~/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 <span class="hidden-xs">@Convert.ToString(Session["UserName"])</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <!-- User image -->
                                 <li class="user-header">
                                     <img src="~/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
                                         @Convert.ToString(Session["UserName"]) - Web Developer
                                     </p>
                                 </li>
-                                <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
                                         <a href="#" class="btn btn-default btn-flat">Profile</a>
@@ -100,93 +91,7 @@
 
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" data-widget="tree">
-
                     <li ng-repeat="menu in MenuList" ng-class="{'active': rootname == menu.MenuName }"><a href="{{menu.Path}}" ng-click="updatemenuclick(menu.MenuName)"><i class="{{menu.Icon}} "></i><span> {{menu.MenuName}}</span></a></li>
-                    @*<ul class="sidebar-menu" data-widget="tree">
-                            <li class='@Html.IsActive("Main", "Index")' aria-haspopup="true">
-                                <a href="Index">
-                                    <i class="fa fa-dashboard"></i>
-                                    <span>  Dashboard</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "Strategy")'>
-                                <a href="Strategy">
-                                    <i class="fa fa-circle-o"></i><span>    Application</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "Tasks")'>
-                                <a href="Tasks">
-                                    <i class="fa fa-circle-o"></i>
-                                    <span>Change Management</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "MapTask")'>
-                                <a href="MapTask">
-                                    <i class="fa fa-tasks"></i>
-                                    <span>Map Strategy</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "Approvals")'>
-                                <a href="Approvals">
-                                    <i class="fa fa-circle-o"></i>
-                                    <span>Approvals / Transfers</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "TransferSettings")'>
-                                <a href="TransferSettings">
-                                    <i class="fa fa-circle-o"></i>
-                                    <span>Transfer Settings</span>
-                                </a>
-                            </li>
-
-                            <li class='@Html.IsActive("Main", "Emails")'>
-                                <a href="Emails">
-                                    <i class="fa fa-mail-forward"></i>
-                                    <span>Emails</span>
-
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "Reports")' aria-haspopup="true">
-                                <a href="Reports">
-                                    <i class="fa fa-circle-o"></i>
-                                    <span>Reports</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
-                                <a href="Licensing">
-                                    <i class="fa fa-circle-o"></i>
-                                    <i class="icon-briefcase"></i><span> Licensing</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "UserManagement")' aria-haspopup="true">
-                                <a href="UserManagement">
-                                    <i class="fa fa-circle-o"></i>
-                                    <i class="icon-briefcase"></i><span> User Management</span>
-                                </a>
-                            </li>
-                            <li class='@Html.IsActive("Main", "RoleManagement")' aria-haspopup="true">
-                                <a href="RoleManagement">
-                                    <i class="fa fa-circle-o"></i>
-                                    <i class="icon-briefcase"></i><span> Role Management</span>
-                                </a>
-                            </li>
-                            <li class="treeview">
-                                <a href="#">
-                                    <i class="fa fa-files-o"></i>
-                                    <span>Utilities</span>
-                                    <span class="pull-right-container">
-                                        <span class="label label-primary pull-right">4</span>
-                                    </span>
-                                </a>
-                                <ul class="treeview-menu" style="display: none;">
-                                    <li><a href="Country"><i class="fa fa-circle-o"></i> Country</a></li>
-                                    <li><a href="Region"><i class="fa fa-circle-o"></i> Region</a></li>
-                                    <li><a href="BusinessSector"><i class="fa fa-circle-o"></i> Business Sector</a></li>
-                                    <li><a href="ApplicationMaster"><i class="fa fa-circle-o"></i> Application Master</a></li>
-                                    <li><a href="ProductType"><i class="fa fa-circle-o"></i> Product Type</a></li>
-                                </ul>
-                            </li>
-                        </ul>*@
                 </ul>
             </section>
             <!-- /.sidebar -->
@@ -236,12 +141,10 @@
         </div>
         <footer class="main-footer">
             <div class="container">
-
                 <div class="pull-right hidden-xs">
                     <b>Version</b> 1.0.0
                 </div>
-                <strong>Copyright &copy; 2017 COBA</strong> All rights
-                reserved.
+                <strong>Copyright &copy; 2017 COBA</strong> All rights reserved.
             </div>
         </footer>
     </div>
